finished the api documentation
